Add more aliases to the /slimeranks command