@@ -9,7 +9,6 @@ import org.bukkit.entity.Player;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 
@@ -17,7 +16,7 @@ public class SlimeranksCommand extends Command {
 
     public SlimeranksCommand(@NotNull String name) {
         super(name);
-        setAliases(Collections.singletonList("sr"));
+        setAliases(List.of("sr", "rank", "ranks"));
         setDescription("Command to manage the SlimeRanks plugin.");
         setPermission("slimeranks.admin");
     }
